Kubernetes/networkPolicies/egress/allow-client-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-egress
  namespace: vansystem
spec:
  podSelector:
    matchLabels:
      app: client


  policyTypes:
    - Egress

    
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: server
