Kubernetes/networkPolicies/egress/allow-pgadmin-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pgadmin-egress
  namespace: vansystem
spec:
  podSelector:
    matchLabels:
      app: pgadmin


  policyTypes:
    - Egress

    
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: postgres
