Kubernetes/networkPolicies/egress/allow-server-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-egress
  namespace: vansystem
spec:
  podSelector:
    matchLabels:
      app: server


  policyTypes:
    - Egress

    
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: postgres
